@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-20T16:19:05Z",
-  "count_outdated" : 108,
-  "uniques_outdated" : 72,
+  "timestamp" : "2022-07-22T16:22:53Z",
+  "count_outdated" : 109,
+  "uniques_outdated" : 73,
   "count" : 110,
   "uniques" : 74,
   "clones" : [
-    {
-      "timestamp": "2022-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-20T00:00:00Z",
       "count": 1,
